--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,8 @@
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
+
 trigger:
 - master
 
@@ -9,30 +14,7 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
+- script: 
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
-
-- script: dir /s test_results.trx
-  displayName: 'Verificar existencia de test_results.trx'
-
-# 🧪 Ejecutar pruebas y generar archivo .trx
-- script: |
-    dotnet test --logger:"trx;LogFileName=test_results.trx"
-  displayName: 'Ejecutar pruebas y generar archivo .trx'
-
-# 📄 Publicar resultados de pruebas
-- task: PublishTestResults@2
-  inputs:
-    testResultsFiles: '**/test_results.trx'
-    testRunTitle: 'Simulación de pruebas'
-  condition: succeededOrFailed()
-  displayName: 'Publicar resultados de pruebas'
-
-# 📊 Generar informe HTML de pruebas
-- script: |
-    dotnet tool install --global dotnet-reportgenerator-globaltool || echo "Falló instalación"
-    reportgenerator -reports:test_results.trx -targetdir:TestReport -reporttypes:Html || echo "Falló generación de reporte"
-  displayName: 'Generar informe HTML de pruebas'
-  continueOnError: true
