--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,8 @@ steps:
 - script: dotnet build --configuration Release
   displayName: 'Compilar proyecto'
 
-- script: dir /s test_results.trx
-  displayName: 'Verificar existencia de test_results.trx'
-
-- script: dotnet test --logger:"trx;LogFileName=test_results.trx"
-  displayName: 'Ejecutar pruebas'
+- script: dotnet test DemoTests/DemoTests.csproj --logger:"trx;LogFileName=test_results.trx"
+  displayName: 'Ejecutar pruebas y generar archivo trx'
 
 - task: PublishTestResults@2
   inputs:
