--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,23 +1,20 @@
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
+
 trigger:
 - master
 
 pool:
   name: LocalPool
+  demands: []
 
 steps:
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '7.0.x'
+- script: echo Hello, world!
+  displayName: 'Run a one-line script'
 
-- script: dotnet restore
-  displayName: 'Restaurar dependencias'
-
-- script: dotnet test DemoTests/DemoTests.csproj --logger:"trx;LogFileName=test_results.trx"
-  displayName: 'Ejecutar pruebas y generar archivo trx'
-
-- task: PublishTestResults@2
-  inputs:
-    testResultsFiles: '**/*.trx'
-    testRunTitle: 'Resultados de pruebas'
-  condition: succeededOrFailed()
+- script: 
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
